# tauri-boilerplate

./: DEVELOPER_GUIDE.md  README.md  index.html  package-lock.json  package.json
public/: splashscreen.html
src/: App.css  App.tsx  constant.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/Components/: AppHeader.module.css  AppHeader.tsx  Card.tsx  Input.tsx  SearchModal.tsx  SectionHeader.tsx  Sidebar.tsx
src/Hooks/: useAppDate.ts  useAutostart.ts  useGlobalShortcut.ts  useSearch.ts  useToolHistory.ts
src/Layouts/: MainLayout.tsx
src/Pages/: Home.tsx  Settings.tsx
src/Services/: MenuItems.ts
src/types/: index.ts
